--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
         "moment": "^2.19.1",
         "vue-tabs-component": "^1.3.0",
+        "vue2-dragula": "^2.5.0",
         "vuedraggable": "^2.14.1",
         "vuejs-datepicker": "^0.9.18"
     }
